fix footer bottom spacing

--- a/resources/assets/sass/_vestidos_header_footer.scss
+++ b/resources/assets/sass/_vestidos_header_footer.scss
@@ -150,6 +150,8 @@
 }
 .vesti-footer-section-2{
     border-top:$main-vesti-color-light 1px solid;
+}
+.vesti-footer-section-2 div.footer-bottom-col{
     padding-top: 10px;
 }
 .vesti-footer-section-2 div:first-child{
